kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: app
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      service: app
  template:
    metadata:
      labels:
        service: app
    spec:
      containers:
        - name: app
          image: spring-containers-app:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
